<resources>
    <string name="menu_add_product">Add Product</string>
    <string name="menu_manage_order">Manage Order</string>
    <string name="menu_manage_shelf">Manage Shelf</string>
    <string name="menu_manage_bank">Manage Bank</string>
    <string name="menu_manage_prices">Manage Prices</string>
    <string name="menu_manage_reports">Manage Reports</string>
    <string name="menu_sales_promotion">Sales and Promotion</string>
    <string name="menu_manage_inventory">Manage Inventory</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="app_name">PerfectMANDI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mail">Email us</string>
    <string name="share">Share</string>
    <string name="upload">Upload</string>
    <string name="acc">Profile</string>
    <string name="title_activity_testtv2">testtv2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="exampledata">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="title_activity_front_updated">FrontUpdatedActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_main_other">MainActivity_other</string>
    <string name="title_activity_mainupdate">MainActivity</string>

    <string name="text_str">Note: As a general market practice, Silver and Melamine items are sold based on weight hence actual weight of your ordered items will be confirmed at the time of shipment which means total order amount may differ than the above amount by +/- 5%. Your balance will be adjusted in your next order.</string>
    <string name="msg_token_fmt" />
    <string name="question_mark_delete">Do you really want to delete it?</string>


    <string-array name="punjab_city_array">
        <item>Select City</item>
        <item>Rawalpindi</item>
        <item>Faisalabad</item>
    </string-array>
    <string-array name="kashmir_city_array">
        <item>Select City</item>
        <item>Bagh</item>
        <item>Dhali</item>
    </string-array>
    <string-array name="province_array">
        <item>Select province</item>
        <item>Punjab</item>
        <item>Kashmir</item>
        <item>Sindh</item>
        <item>Balochistan</item>
        <item>khyber pakhtunkhwa</item>
    </string-array>
    <string name="title_activity_main2">MainActivity2</string>

</resources>